# delibird

./: Cargo.toml  LICENSE  README.md
src/: app.rs  core.rs  date_input.rs  event.rs  input.rs  lib.rs  main.rs  storage.rs  task.rs  task_form.rs  ui.rs  utils.rs
src/core/: error.rs  events.rs  storage.rs  task.rs  validation.rs
src/core/task/: task.rs  task_list.rs
src/ui/: components.rs  forms.rs
src/ui/components/: error_display.rs  footer.rs  popups.rs  task_detail.rs  task_list.rs
src/ui/components/popups/: delete_confirm.rs  task_form.rs
src/ui/forms/: date_input.rs  task_form.rs
src/utils/: date.rs
