[package]
name = "delibird"
version = "0.1.0"
description = "A simple TUI todo app using Rust Ratatui"
authors = ["SimonOneNineEight <ss121549@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
uuid = { version = "1.16.0", features = ["v4"] }
chrono = "0.4.41"
tui-textarea = "0.7.0"
