[package]
name = "delibird"
version = "0.1.0"
description = "A simple TUI todo app using Rust Ratatui"
authors = ["SimonOneNineEight <ss121549@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
tui-textarea = "0.7.0"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
