[package]
name = "delibird"
version = "0.1.0"
description = "A simple TUI todo app using Rust Ratatui"
authors = ["SimonOneNineEight <ss121549@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["widget-calendar"] }
color-eyre = "0.6.3"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
tui-textarea = "0.7.0"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
itertools = "0.14.0"
strum = { version = "0.27.1", features = ["derive"] }
tui-widgets = "0.4.1"
time = { version = "0.3.41", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
